# hpc_squid_simulation

./: README.md  SETUP_README.md  setup_torch_env.sh
gmlp_project/: README.md  pyproject.toml  setup.py
gmlp_project/analysis_scripts/: mlm_overlap_metrics_layer_profile.py  mlm_overlap_metrics_layer_profile_diff_train.sh  mlm_overlap_metrics_layer_profile_diff_val.sh  mlm_overlap_metrics_layer_profile_same_train.sh  mlm_overlap_metrics_layer_profile_same_val.sh  mlm_q_fig_two_sets_random.sh  mlm_q_fig_two_sets_train.sh  mlm_q_fig_two_sets_train100.sh  mlm_q_fig_two_sets_train_multigpu.sh  mlm_q_fig_two_sets_val.sh  mlm_q_fig_two_sets_val10.sh  mlm_q_fig_two_sets_val100.sh  mlm_qinv_autocorr.py  mlm_qinv_autocorr.sh  mlm_qinv_calc_fig_two_sets.py  mlp_mlm_overlap_metrics_layer_profile.py  mlp_overlap_metrics_layer_profile_diff_train.sh  mlp_overlap_metrics_layer_profile_diff_val.sh  mlp_overlap_metrics_layer_profile_same_train.sh  mlp_overlap_metrics_layer_profile_same_val.sh  mlp_overlap_metrics_layer_profile_two_sets_train.sh  mlp_q_fig_one_set.sh  mlp_q_fig_two_sets.sh  mlp_q_fig_two_sets_train.sh  mlp_q_fig_two_sets_train_sup.sh  mlp_q_fig_two_sets_train_sup_epoch1000.sh  mlp_q_fig_two_sets_train_sup_multigpu.sh  mlp_q_fig_val_two_sets.sh  mlp_qinv_calc_fig_one_set.py  mlp_qinv_calc_fig_two_sets.py  overlap_metrics.py  overlap_metrics_job.sh  overlap_metrics_layer_profile.py  overlap_metrics_layer_profile_job.sh  overlap_metrics_layer_profile_job_gmlp.sh  overlap_metrics_layer_profile_job_label0_label1.sh  overlap_metrics_layer_profile_mlp.py  pca_mnist.py  (+17 more)
(+67 files in other folders)
